--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body><script src="./main.js"></script>
     <div id="like_button_container"></div>
     <!--
         react
         react-dom
         lodash
     -->
-    <script src="./main.js"></script>
+    
     <script>
         _.times(5,function(a){
             console.log(a);
